# codex-usage-tracker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  README.md  codex-usage.example.toml  codex-usage.toml
src/: app.rs  cli.rs  config.rs  ingest.rs  main.rs  proxy.rs  storage.rs  tui.rs
src/usage/: mod.rs
